# maludb-python-api-server

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
app/: auth.py  auth_store.py  config.py  database.py  errors.py  llm_catalog.py  main.py  sql_log.py
app/helpers/: attributes.py  documents.py  llm.py  llm_resolve.py  query.py  skills.py  statements.py  writes.py
app/routers/: attributes.py  documents.py  episodes.py  graph.py  llm_config.py  mcp.py  memory.py  memory_maintenance.py  memory_notes.py  model_prompts.py  notes.py  objects.py  pools.py  projects.py  skills.py  statements.py  subjects.py  tokens.py  types.py  verbs.py
config/: auth_store.sql
config/prompts/: chatgpt-4o.system.txt  extract.simple.system.txt  query-parse.system.txt  skill-extract.system.txt
deploy/: embedding-worker.env.example  maludb-api.service  maludb-embedding-worker.service  maludb-embedding-worker.timer  maludb-memory-reindex.service  maludb-memory-reindex.timer  maludb-skill-reindex.service  maludb-skill-reindex.timer  memory-reindex.env.example  skill-reindex.env.example
docs/: SETUP.md
tests/: test_attributes.py  test_documents.py  test_episodes.py  test_foundation.py  test_graph.py  test_helpers.py  test_llm_config.py  test_llm_helpers.py  test_mcp.py  test_memory.py  test_memory_maintenance.py  test_memory_notes.py  test_model_prompts.py  test_notes.py  test_objects.py  test_pools.py  test_projects.py  test_query.py  test_skill_helpers.py  test_skills.py  test_statements.py  test_subjects.py  test_tokens.py  test_types.py  test_verbs.py  test_writes.py
(+2 files in other folders)
